refactor(schedule): api 한 개로 통합(이벤트 목록 제외)